aarch64: fix register usage in block zeroing

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • 9
    • Affects Version/s: 9
    • Component/s: hotspot
    • None
    • b120
    • aarch64
    • linux

      The out of line block zero routine uses r10 for the base and r11 for the word count.

      These registers are pinned in aarch64.ad when matching the ClearArray nodes. eg.

      instruct clearArray_reg_reg(iRegL_R11 cnt, iRegP_R10 base, Universe dummy, rFlagsReg cr)

      However, the block zero routine may also be called from the ArrayFill stub is the value being filled is 0 and the count is large.

      In the ArrayFill stub, the base is in R0 and the count is in R3

            Assignee:
            Ed Nevill
            Reporter:
            Ed Nevill
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: