8155967: aarch64: fix register usage in block zeroing

Fix array fill stub to use r10 == base and r11 == count

Reviewed-by: aph